// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dropdown component > With items 1`] = `
<div
  class="dropdown"
  role="list"
  tabindex="0"
>
  <a
    class="dropdown__selected"
  >
    
    <span
      class="dropdown__selected-placeholder"
    >
      action.makeChoice
    </span>
    
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
  <div
    class="dropdown__items hidden"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
    <ul
      class="select__items"
      tabindex="-1"
    >
      
      <li
        class="select__item select__item--no-options visible"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!--v-if-->
            
            <!--v-if-->
            <!--v-if-->
            <span
              class="select__item-name-text"
              title="A"
            >
              A
            </span>
            
          </div>
          <!--v-if-->
        </a>
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
      
    </ul>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`Dropdown component > With items 2`] = `
<div
  class="dropdown"
  role="list"
  tabindex="0"
>
  <a
    class="dropdown__selected"
  >
    
    
    <!--v-if-->
    <!--v-if-->
    <span
      class="dropdown__selected-text"
      title="A"
    >
      A
    </span>
    
    
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
  <div
    class="dropdown__items hidden"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
    <ul
      class="select__items"
      tabindex="-1"
    >
      
      <li
        class="select__item select__item--no-options visible active"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!--v-if-->
            
            <!--v-if-->
            <!--v-if-->
            <span
              class="select__item-name-text"
              title="A"
            >
              A
            </span>
            
          </div>
          <!--v-if-->
        </a>
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
      <li
        class="select__item select__item--no-options visible"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!--v-if-->
            
            <!--v-if-->
            <!--v-if-->
            <span
              class="select__item-name-text"
              title="B"
            >
              B
            </span>
            
          </div>
          <!--v-if-->
        </a>
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
      <li
        class="select__item select__item--no-options visible disabled"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!--v-if-->
            
            <!--v-if-->
            <!--v-if-->
            <span
              class="select__item-name-text"
              title="C"
            >
              C
            </span>
            
          </div>
          <!--v-if-->
        </a>
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
      <li
        class="select__item select__item--no-options visible"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!--v-if-->
            
            <i
              class="select__item-icon times"
            />
            <!--v-if-->
            <span
              class="select__item-name-text"
              title="D"
            >
              D
            </span>
            
          </div>
          <!--v-if-->
        </a>
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
      <li
        class="select__item select__item--no-options visible"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!--v-if-->
            
            <!--v-if-->
            <!--v-if-->
            <span
              class="select__item-name-text"
              title="E"
            >
              E
            </span>
            
          </div>
          <div
            class="select__item-description"
          >
            My description
          </div>
        </a>
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
      
    </ul>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`Dropdown component > With items 3`] = `
<div
  class="dropdown dropdown--floating"
  role="list"
  tabindex="0"
>
  <!--v-if-->
  <div
    class="dropdown__items hidden"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
    <ul
      class="select__items"
      tabindex="-1"
    >
      
      <li
        class="select__item select__item--no-options visible active"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!--v-if-->
            
            <!--v-if-->
            <!--v-if-->
            <span
              class="select__item-name-text"
              title="A"
            >
              A
            </span>
            
          </div>
          <!--v-if-->
        </a>
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
      <li
        class="select__item select__item--no-options visible"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!--v-if-->
            
            <!--v-if-->
            <!--v-if-->
            <span
              class="select__item-name-text"
              title="B"
            >
              B
            </span>
            
          </div>
          <!--v-if-->
        </a>
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
      
    </ul>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`Dropdown component > basics 1`] = `
<div
  class="dropdown"
  role="list"
  tabindex="0"
>
  <a
    class="dropdown__selected"
  >
    
    <span
      class="dropdown__selected-placeholder"
    >
      action.makeChoice
    </span>
    
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
  <div
    class="dropdown__items hidden"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
    <ul
      class="select__items"
      style="display: none;"
      tabindex="-1"
    >
      
      
    </ul>
    <div
      class="select__items--empty"
    >
      
      dropdown.empty
      
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`Dropdown component > basics 2`] = `
<div
  class="dropdown"
  role="list"
  tabindex="0"
>
  <a
    class="dropdown__selected"
  >
    
    <span
      class="dropdown__selected-placeholder"
    >
      action.makeChoice
    </span>
    
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
  <div
    class="dropdown__items hidden"
  >
    <!--v-if-->
    <ul
      class="select__items"
      style="display: none;"
      tabindex="-1"
    >
      
      
    </ul>
    <div
      class="select__items--empty"
    >
      
      dropdown.empty
      
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`Dropdown component > basics 3`] = `
<div
  class="dropdown dropdown--disabled"
  role="list"
  tabindex=""
>
  <a
    class="dropdown__selected"
  >
    
    <span
      class="dropdown__selected-placeholder"
    >
      action.makeChoice
    </span>
    
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
  <div
    class="dropdown__items hidden"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
    <ul
      class="select__items"
      style="display: none;"
      tabindex="-1"
    >
      
      
    </ul>
    <div
      class="select__items--empty"
    >
      
      dropdown.empty
      
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`Dropdown component > change value prop 1`] = `
<div
  class="dropdown"
  role="list"
  tabindex="0"
>
  <a
    class="dropdown__selected"
  >
    
    
    <!--v-if-->
    <!--v-if-->
    <span
      class="dropdown__selected-text"
      title="B"
    >
      B
    </span>
    
    
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
  <div
    class="dropdown__items hidden"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
    <ul
      class="select__items"
      tabindex="-1"
    >
      
      <li
        class="select__item select__item--no-options visible"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!--v-if-->
            
            <!--v-if-->
            <!--v-if-->
            <span
              class="select__item-name-text"
              title="A"
            >
              A
            </span>
            
          </div>
          <!--v-if-->
        </a>
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
      <li
        class="select__item select__item--no-options visible active"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!--v-if-->
            
            <!--v-if-->
            <!--v-if-->
            <span
              class="select__item-name-text"
              title="B"
            >
              B
            </span>
            
          </div>
          <!--v-if-->
        </a>
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
      
    </ul>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`Dropdown component > focus 1`] = `
<div
  class="dropdown"
  role="list"
  tabindex=""
>
  <a
    class="dropdown__selected"
  >
    
    
    <!--v-if-->
    <!--v-if-->
    <span
      class="dropdown__selected-text"
      title="A"
    >
      A
    </span>
    
    
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
  <div
    class="dropdown__items"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
    <ul
      class="select__items prevent-scroll"
      tabindex="-1"
    >
      
      <li
        class="select__item select__item--no-options visible active hover"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!--v-if-->
            
            <!--v-if-->
            <!--v-if-->
            <span
              class="select__item-name-text"
              title="A"
            >
              A
            </span>
            
          </div>
          <!--v-if-->
        </a>
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
      
    </ul>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`Dropdown component > focus 2`] = `
<div
  class="dropdown"
  role="list"
  tabindex="0"
>
  <a
    class="dropdown__selected"
  >
    
    
    <!--v-if-->
    <!--v-if-->
    <span
      class="dropdown__selected-text"
      title="A"
    >
      A
    </span>
    
    
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
  <div
    class="dropdown__items hidden"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
    <ul
      class="select__items prevent-scroll"
      tabindex="-1"
    >
      
      <li
        class="select__item select__item--no-options visible active hover"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!--v-if-->
            
            <!--v-if-->
            <!--v-if-->
            <span
              class="select__item-name-text"
              title="A"
            >
              A
            </span>
            
          </div>
          <!--v-if-->
        </a>
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
      
    </ul>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`Dropdown component > interactions 1`] = `
<div
  class="dropdown"
  role="list"
  tabindex=""
>
  <a
    class="dropdown__selected"
  >
    
    
    <!--v-if-->
    <!--v-if-->
    <span
      class="dropdown__selected-text"
      title="A"
    >
      A
    </span>
    
    
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
  <div
    class="dropdown__items"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
    <ul
      class="select__items prevent-scroll"
      tabindex="-1"
    >
      
      <li
        class="select__item select__item--no-options visible active hover"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!--v-if-->
            
            <!--v-if-->
            <!--v-if-->
            <span
              class="select__item-name-text"
              title="A"
            >
              A
            </span>
            
          </div>
          <!--v-if-->
        </a>
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
      <li
        class="select__item select__item--no-options visible"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!--v-if-->
            
            <!--v-if-->
            <!--v-if-->
            <span
              class="select__item-name-text"
              title="B"
            >
              B
            </span>
            
          </div>
          <!--v-if-->
        </a>
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
      
    </ul>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`Dropdown component > interactions 2`] = `
<div
  class="dropdown"
  role="list"
  tabindex="0"
>
  <a
    class="dropdown__selected"
  >
    
    
    <!--v-if-->
    <!--v-if-->
    <span
      class="dropdown__selected-text"
      title="A"
    >
      A
    </span>
    
    
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
  <div
    class="dropdown__items hidden"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
    <ul
      class="select__items prevent-scroll"
      tabindex="-1"
    >
      
      <li
        class="select__item select__item--no-options visible active hover"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!--v-if-->
            
            <!--v-if-->
            <!--v-if-->
            <span
              class="select__item-name-text"
              title="A"
            >
              A
            </span>
            
          </div>
          <!--v-if-->
        </a>
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
      <li
        class="select__item select__item--no-options visible"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!--v-if-->
            
            <!--v-if-->
            <!--v-if-->
            <span
              class="select__item-name-text"
              title="B"
            >
              B
            </span>
            
          </div>
          <!--v-if-->
        </a>
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
      
    </ul>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`Dropdown component > slots 1`] = `
<div
  class="dropdown"
  role="list"
  tabindex="0"
>
  <a
    class="dropdown__selected"
  >
    
    
    <!--v-if-->
    <!--v-if-->
    <span
      class="dropdown__selected-text"
      title="A"
    >
      A
    </span>
    
    
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
  <div
    class="dropdown__items hidden"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
    <ul
      class="select__items"
      tabindex="-1"
    >
      
      <li
        class="select__item select__item--no-options visible active"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!--v-if-->
            
            My item
            
          </div>
          <!--v-if-->
        </a>
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
      
    </ul>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;
